--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title: jjarzynski
-tagline: back-to-back-end
+title: back2back&
+tagline: w/ J. Jarzyński
 url: https://jjarzynski.github.io
 paginate: 1
 baseurl: ""
