--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: back2back&
-tagline: w/ J. Jarzyński
+tagline: jjarzynski
 url: https://jjarzynski.github.io
 paginate: 1
 baseurl: ""
