--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,14 @@
 # Site settings
 title: jjarzynski.dev
+# description: "A minimal, responsive, ready to use blog template, built with Jekyll."
+# url: "http://www.dyutibarma.github.io/monochrome"
+# author:
+#  name: "The Review Index"
+#  email: "dyutibarma@gmail.com"
+#  url: "https://thereviewindex.com"
 
 # Build settings
-baseurl: / # Change this to your relative path (ex: /blog/), or leave just a /
+baseurl: /
 markdown: kramdown
 source: .
 destination: ./_site
